does docker work

--- a/simulator/Dockerfile
+++ b/simulator/Dockerfile
@@ -2,4 +2,5 @@ FROM python:3.11-alpine
 
 COPY src/ .
 
-ENTRYPOINT [ "python", "-c" ]
+#ENTRYPOINT [ "python", "-c" ]
+ENTRYPOINT [ "sh", "play.sh" ]
