--- a/k8s/server-service.yml
+++ b/k8s/server-service.yml
@@ -4,6 +4,7 @@ kind: Service
 
 metadata:
   name: server-service
+  namespace: server
 
 spec:
   type: LoadBalancer
@@ -12,3 +13,4 @@ spec:
   ports:
     - protocol: TCP
       port: 3000
+      targetPort: 3000
