migrate to helm + fix sandbox again

--- a/helm/templates/server-deployment.yml
+++ b/helm/templates/server-deployment.yml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         app: server-deployment
+        date: "{{ now | unixEpoch }}"
     spec:
       serviceAccountName: bbcs-server
       containers:
