--- a/helm/templates/sandbox-networkpolicy.yml
+++ b/helm/templates/sandbox-networkpolicy.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: NetworkPolicy
 metadata:
   name: default-deny-networking
+  namespace: sandbox
 spec:
   podSelector: {}
   policyTypes:
