--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,6 +33,7 @@ jobs:
     - name: 'Build and push server'
       uses: 'docker/build-push-action@v4'
       with:
+        registry: asia-southeast1-docker.pkg.dev
         file: ./server/Dockerfile
         context: ./server
         push: true
@@ -41,6 +42,7 @@ jobs:
     - name: 'Build and push sandbox'
       uses: 'docker/build-push-action@v4'
       with:
+        registry: asia-southeast1-docker.pkg.dev
         file: ./simulator/Dockerfile
         context: ./simulator
         push: true
