--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -33,18 +33,16 @@ jobs:
     - name: 'Build and push server'
       uses: 'docker/build-push-action@v4'
       with:
-        registry: asia-southeast1-docker.pkg.dev
         file: ./server/Dockerfile
         context: ./server
         push: true
-        tags: bbcs/server:latest
+        tags: asia-southeast1-docker.pkg.dev/bbcs/server:latest
 
     - name: 'Build and push sandbox'
       uses: 'docker/build-push-action@v4'
       with:
-        registry: asia-southeast1-docker.pkg.dev
         file: ./simulator/Dockerfile
         context: ./simulator
         push: true
-        tags: bbcs/sandbox:latest
+        tags: asia-southeast1-docker.pkg.dev/bbcs/sandbox:latest
 
