--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -79,12 +79,37 @@ jobs:
       run: |
         helm push ./starvation-backend-chart-1.0.0.tgz oci://asia-southeast1-docker.pkg.dev/starvation/helm/
 
-  # helm-upgrade:
-  #   needs: [build-image, package-helm]
-  #   runs-on: ubuntu-latest
+  helm-upgrade:
+    needs: [build-image, package-helm]
+    runs-on: ubuntu-latest
 
-  #   permissions:
-  #     contents: 'read'
-  #     id-token: 'write'
+    permissions:
+      contents: 'read'
+      id-token: 'write'
 
-  #   steps:
+    steps:
+    - uses: actions/checkout@v3
+
+    - id: 'auth'
+      name: 'Authenticate to Google Cloud'
+      uses: 'google-github-actions/auth@v1'
+      with:
+        token_format: 'access_token'
+        workload_identity_provider: "projects/596255395612/locations/global/workloadIdentityPools/gh-actions-pool/providers/gh-actions-provider"
+        service_account: "github-actions@starvation.iam.gserviceaccount.com"
+
+    - uses: 'docker/login-action@v1'
+      name: 'Login to Google Artifact Registry'
+      with:
+        registry: 'asia-southeast1-docker.pkg.dev'
+        username: 'oauth2accesstoken'
+        password: '${{ steps.auth.outputs.access_token }}'
+
+    - uses: 'google-github-actions/get-gke-credentials@v1'
+      with:
+        cluster_name: 'starvation'
+        location: 'asia-southeast1'
+
+    - name: 'Upgrade Helm chart'
+      run: |
+        helm upgrade --install starvation-backend oci://asia-southeast1-docker.pkg.dev/starvation/helm/starvation-backend-chart
