--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -105,7 +105,8 @@ jobs:
         username: 'oauth2accesstoken'
         password: '${{ steps.auth.outputs.access_token }}'
 
-    - uses: 'google-github-actions/get-gke-credentials@v1'
+    - name: 'Get GKE credentials'
+      uses: 'google-github-actions/get-gke-credentials@v1'
       with:
         cluster_name: 'starvation'
         location: 'asia-southeast1'
