add database link

--- a/helm/templates/server-deployment.yml
+++ b/helm/templates/server-deployment.yml
@@ -26,3 +26,24 @@ spec:
             limits:
               memory: "256Mi"
               cpu: "500m" 
+          env:
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: postgres-host
+                  key: db_host
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: postgres
+                  key: username
+            - name: DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: postgres
+                  key: password
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: postgres
+                  key: database
