use the built psycopg

--- a/server/Pipfile
+++ b/server/Pipfile
@@ -8,7 +8,7 @@ kubernetes = "*"
 Flask = "*"
 Flask-Cors = "*"
 orjson = "*"
-psycopg = {extras = ["binary"], version = "*"}
+psycopg = {extras = ["c"], version = "*"}
 
 [dev-packages]
 
