--- a/helm/templates/runner-serviceaccount.yml
+++ b/helm/templates/runner-serviceaccount.yml
@@ -1,5 +1,5 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: starvation-server
-  namespace: server
+  name: starvation-runner
+  namespace: runner
