--- a/helm/templates/sandbox-pods-role.yml
+++ b/helm/templates/sandbox-pods-role.yml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: server-sandbox-pods
+  name: sandbox-pods-admin
   namespace: sandbox
 rules:
   - apiGroups: [""]
