--- a/helm/templates/sandbox-pods-rolebinding.yml
+++ b/helm/templates/sandbox-pods-rolebinding.yml
@@ -1,13 +1,16 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: server-sandbox-pods-binding
+  name: sandbox-pods-admin-binding
   namespace: sandbox
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
-  name: server-sandbox-pods
+  name: sandbox-pods-admin
 subjects:
   - kind: ServiceAccount
-    name: bbcs-server
+    name: starvation-runner
+    namespace: runner
+  - kind: ServiceAccount
+    name: starvation-server
     namespace: server
