--- a/.github/workflows/build-server.yml
+++ b/.github/workflows/build-server.yml
@@ -32,7 +32,7 @@ jobs:
         username: 'oauth2accesstoken'
         password: '${{ steps.auth.outputs.access_token }}'
 
-    - name: 'Build and push runner'
+    - name: 'Build and push server'
       uses: 'docker/build-push-action@v4'
       with:
         file: ./server/Dockerfile
