--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-    "python.analysis.typeCheckingMode": "basic"
+    "python.analysis.typeCheckingMode": "basic",
+    "yaml.schemas": {
+        "https://json.schemastore.org/github-workflow.json": "file:///home/squiddy/github/codecombat-backend/.github/workflows/deploy.yml"
+    }
 }
