--- a/helm/templates/server-ingress.yml
+++ b/helm/templates/server-ingress.yml
@@ -2,6 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: server-ingress
+  namespace: server
 spec:
   defaultBackend:
     service:
