--- a/helm/templates/server-ingress.yml
+++ b/helm/templates/server-ingress.yml
@@ -5,7 +5,7 @@ metadata:
   namespace: server
   annotations:
     kubernetes.io/ingress.global-static-ip-name: starvation-backend
-    networking.gke.io/managed-certificates: managed-cert
+    networking.gke.io/managed-certificates: server-cert
     kubernetes.io/ingress.class: "gce"
 
 spec:
