--- a/helm/templates/runner-deployment.yml
+++ b/helm/templates/runner-deployment.yml
@@ -27,7 +27,7 @@ spec:
           {{- end }}
           resources:
             limits:
-              memory: "512Mi"
+              memory: "1Gi"
               cpu: "100m"
           env:
             - name: PGHOST
