--- a/helm/templates/server-backendconfig.yml
+++ b/helm/templates/server-backendconfig.yml
@@ -1,6 +1,7 @@
 apiVersion: cloud.google.com/v1
 kind: BackendConfig
 metadata:
-  name: backendconfig
+  name: server-backendconfig
+  namespace: server
 spec:
   timeoutSec: 120
