wrong place bruh

--- a/helm/templates/server-service.yml
+++ b/helm/templates/server-service.yml
@@ -5,6 +5,7 @@ kind: Service
 metadata:
   name: server-service
   namespace: server
+  cloud.google.com/backend-config: '{"default": "server-backendconfig"}'
 
 spec:
   type: LoadBalancer
