--- a/helm/templates/server-service.yml
+++ b/helm/templates/server-service.yml
@@ -5,7 +5,8 @@ kind: Service
 metadata:
   name: server-service
   namespace: server
-  cloud.google.com/backend-config: '{"default": "server-backendconfig"}'
+  annotations:
+    cloud.google.com/backend-config: '{"default": "server-backendconfig"}'
 
 spec:
   type: LoadBalancer
