--- a/helm/templates/server-deployment.yml
+++ b/helm/templates/server-deployment.yml
@@ -29,8 +29,8 @@ spec:
             - containerPort: 3000
           resources:
             limits:
-              memory: "1Gi"
-              cpu: "500m" 
+              memory: "256Mi"
+              cpu: "150m" 
           env:
             - name: PGHOST
               valueFrom:
